--- a/test/index.html
+++ b/test/index.html
@@ -15,12 +15,7 @@
         <script src="../lib/backbone/backbone.js"></script>
 
         <!-- Sources -->
-        <script src="../src/model.js"></script>
-        <script src="../src/collection.js"></script>
-        <script src="../src/sync.js"></script>
-        <script src="../src/belongs_to.js"></script>
-        <script src="../src/has_many.js"></script>
-        <script src="../src/has_one.js"></script>
+        <script src="../src/backbone.associations.js"></script>
 
         <!-- Tests -->
         <script src="../lib/backbone/test/environment.js"></script>
@@ -31,6 +26,8 @@
         <script src="../lib/backbone/test/view.js"></script>
         <script src="../lib/backbone/test/sync.js"></script>
         <script src="../lib/backbone/test/noconflict.js"></script>
+
+        <script src="backbone.associations.js"></script>
 
         <script>
             QUnit.start();
