--- a/test/index.html
+++ b/test/index.html
@@ -14,10 +14,10 @@
         <script src="../lib/underscore/underscore.js"></script>
         <script src="../lib/backbone/backbone.js"></script>
 
-        <!-- Sources -->
+        <!-- Testable sources -->
         <script src="../src/backbone.associations.js"></script>
 
-        <!-- Tests -->
+        <!-- Backbone tests -->
         <script src="../lib/backbone/test/environment.js"></script>
         <script src="../lib/backbone/test/events.js"></script>
         <script src="../lib/backbone/test/model.js"></script>
@@ -27,6 +27,7 @@
         <script src="../lib/backbone/test/sync.js"></script>
         <script src="../lib/backbone/test/noconflict.js"></script>
 
+        <!-- Backbone.Associations tests -->
         <script src="backbone.associations.js"></script>
 
         <script>
