--- a/test/index.html
+++ b/test/index.html
@@ -31,7 +31,9 @@
         <script src="backbone.associations.js"></script>
 
         <script>
-            QUnit.start();
+            $(function () {
+                QUnit.start();
+            });
         </script>
     </head>
 
